--- a/.gitignore
+++ b/.gitignore
@@ -1,3 +1,7 @@
+# data
+contract_data
+download_data
+
 # Byte-compiled / optimized / DLL files
 __pycache__/
 *.py[cod]
@@ -76,6 +80,7 @@ docs/_build/
 target/
 
 # Jupyter Notebook
+*.ipynb
 .ipynb_checkpoints
 
 # IPython
