--- a/pyproject.toml
+++ b/pyproject.toml
@@ -9,7 +9,8 @@ readme = "README.md"
 requires-python = "^3.11"
 dependencies = [
     "requests (>=2.32.3,<3.0.0)",
-    "pandas (>=2.2.3,<3.0.0)"
+    "pandas (>=2.2.3,<3.0.0)",
+    "python-dateutil (>=2.8.2)"
 ]
 
 [tool.poetry]
@@ -17,6 +18,7 @@ dependencies = [
 [tool.poetry.group.dev.dependencies]
 black = "^24.1.1"
 flake8 = "^7.0.0"
+isort = "^5.12.0"
 
 [build-system]
 requires = ["poetry-core>=2.0.0,<3.0.0"]
