--- a/pyproject.toml
+++ b/pyproject.toml
@@ -19,6 +19,8 @@ dependencies = [
 black = "^24.1.1"
 flake8 = "^7.0.0"
 isort = "^5.12.0"
+ipykernel = "^6.29.5"
+scikit-learn = "^1.6.1"
 
 [build-system]
 requires = ["poetry-core>=2.0.0,<3.0.0"]
