--- a/pyproject.toml
+++ b/pyproject.toml
@@ -12,7 +12,8 @@ dependencies = [
     "pandas (>=2.2.3,<3.0.0)",
     "python-dateutil (>=2.8.2)",
     "python-dotenv (>=1.0.1,<2.0.0)",
-    "mem0ai (>=0.1.66,<0.2.0)"
+    "mem0ai (>=0.1.66,<0.2.0)",
+    "chromadb (>=0.6.3,<0.7.0)"
 ]
 
 [tool.poetry]
