--- a/pyproject.toml
+++ b/pyproject.toml
@@ -7,6 +7,10 @@ authors = [
 ]
 readme = "README.md"
 requires-python = "^3.11"
+license = {text = "CC BY-NC 4.0"}
+classifiers = [
+    "License :: OSI Approved :: CC BY-NC 4.0",
+]
 dependencies = [
     "requests (>=2.32.3,<3.0.0)",
     "pandas (>=2.2.3,<3.0.0)",
@@ -14,6 +18,7 @@ dependencies = [
     "python-dotenv (>=1.0.1,<2.0.0)",
     "mem0ai (>=0.1.66,<0.2.0)",
     "chromadb (>=0.6.3,<0.7.0)",
+    "requests-oauthlib (>=2.0.0,<3.0.0)",
 ]
 
 [tool.poetry]
