--- a/pyproject.toml
+++ b/pyproject.toml
@@ -19,6 +19,7 @@ dependencies = [
     "mem0ai (>=0.1.66,<0.2.0)",
     "chromadb (>=0.6.3,<0.7.0)",
     "requests-oauthlib (>=2.0.0,<3.0.0)",
+    "anthropic (>=0.49.0,<0.50.0)",
 ]
 
 [tool.poetry]
