--- a/pyproject.toml
+++ b/pyproject.toml
@@ -20,6 +20,7 @@ dependencies = [
     "chromadb (>=0.6.3,<0.7.0)",
     "requests-oauthlib (>=2.0.0,<3.0.0)",
     "anthropic (>=0.49.0,<0.50.0)",
+    "google-generativeai (>=0.8.4,<0.9.0)",
 ]
 
 [tool.poetry]
